--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
         </div>
       </div>
     </section>
- <section class="projects">
+</header>
+<main>
+   <section class="projects">
     <div class="container">
       <div class="project-cards">
         
@@ -135,7 +137,23 @@
       </div>
     </div>
   </section>
-</header>
+  <section class="oboutme">
+    <div class="container">
+      <div class="oboutme-info">
+        <span class="oboutme-image">
+          <img src="https://wmpics.pics/di-AU43.png" alt="">
+        </span>
+        <h2 class="oboutme-title">Обо мне</h2>
+        <span class="oboutme-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat est consequat eu. Quisque aliquet a ipsum nec tincidunt. Nulla vitae rhoncus leo. Praesent dui sapien, bibendum quis tempus dictum, auctor ac dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at mauris porta, ullamcorper sem quis, lobortis sem. Donec sit amet aliquet dui, at varius est. Phasellus porttitor finibus neque vel vehicula. Duis in nulla egestas, dignissim elit at, imperdiet eros. Integer tristique posuere purus. Suspendisse placerat, quam vitae ullamcorper sollicitudin, dui ligula molestie massa, sit amet laoreet nibh ex vitae dui. Aenean laoreet pellentesque lacus, eget varius massa mattis quis. Nunc ultrices urna eu nunc lobortis pulvinar. Duis viverra, quam non imperdiet scelerisque, urna nunc consequat velit, in mollis erat nibh in libero.</span>
+        <div class="hero-buttons">
+          <a href="#" class="button button-primari">Написать мне</a>
+          <a href="#" class="button button-o">Моё резюме</a>
+        </div>
+      </div>
+      
+    </div>
+  </section>
+</main>
 
 <footer class="footer">
   <div class="container">
